--- a/mainwebsite.html
+++ b/mainwebsite.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>🍜 Kawaii_Restaurant</title>
+   <style>
+     a{
+        text-decoration: none;
+        color:#c85050    }
+   </style>
 </head>
 <body style="background-color: rgb(199, 162, 132);">
    <table style="background-color:rgb(203, 162, 99) ;">
